--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -34,9 +34,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 400 ~/.ssh/id_rsa
+          ssh-keyscan -H
       - name: Deploy Docker Container
         run: |
-          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ubuntu@3.84.79.208 << 'EOF'
+          ssh -i ~/.ssh/id_rsa ubuntu@3.84.79.208 << 'EOF'
             docker pull ${{env.DOCKER_IMAGE}}:latest
             docker stop my-jenkins-app || true
             docker rm my-jenkins-app || true
